# watchhive-backend

./: .gitignore  Dockerfile  README.md  TODO.md  compose.yaml  database.db  database.py  databse.db  entrypoint.sh  main.py  openapi.yaml  pyproject.toml  requirements.txt  security.py  settings.py
.choreo/: component.yaml
api/: genres_all.csv  tv_series_data.csv
controllers/: follows_controller.py  forum_comment_controller.py  forum_group_controller.py  forum_participant_controller.py  forum_post_controller.py  media_comment_controller.py  media_controller.py  review_controller.py  user_controller.py  user_list_controller.py  websocket_manager.py
core/: settings.py
db/: database.py
exceptions/: business_error.py  permission_error.py  record_not_found_error.py
migrations/: env.py
models/: base.py  follows_model.py  forum_comment_model.py  forum_group_model.py  forum_participant_model.py  forum_post_model.py  genre_model.py  media_comment_model.py  media_model.py  midia.py  review_model.py  user_list_model.py  user_model.py
routers/: auth_routers.py  auth_routes.py  follows_routes.py  forum_comment_routes.py  forum_group_routes.py  forum_message_routes.py  forum_participant_routes.py  forum_post_routes.py  fruit.py  load_data.py  media_comment_routes.py  media_routes.py  midia.py  review_routes.py  user_list_routes.py  user_routes.py
routes/: fruit_routes.py
schemas/: auth_schemas.py  commons_schemas.py  forum_post_schemas.py  forum_schemas.py  fruit.py  media_schemas.py  review_schemas.py  user_schemas.py
tests/: conftest.py  test_main.py  (+1 more)
(+67 files in other folders)
